handled receiving data
